Fix font og boksstørrelse

--- a/public/index.html
+++ b/public/index.html
@@ -20,18 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>72Web</title>
-    <style type="text/css">
-      /* lora-regular - latin */
-      @font-face {
-      font-family: 'Lora';
-      font-style: normal;
-      font-weight: 400;
-      src: url('fonts/lora-v11-latin-regular.eot'); /* IE9 Compat Modes */
-      src: local('Lora Regular'), local('Lora-Regular'),
-      url('fonts/lora-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-      url('fonts/lora-v11-latin-regular.svg#Lora') format('svg'); /* Legacy iOS */
-      }
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700i" rel="stylesheet">
   </head>
   <body>
     <noscript>
